# libwebnovel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release.sh  rustfmt.toml
ressources/royalroad/: known_anti-theft_sentences.txt
src/: lib.rs  utils.rs
src/backends/: freewebnovel.rs  libread.rs  lightnovelworld.rs  mod.rs  royalroad.rs
