[package]
name = "libwebnovel"
description = "A Rust crate enabling users to get chapters of a webnovel, with multiple available backends."
homepage = "https://codeberg.org/paulollivier/libwebnovel"
repository = "https://codeberg.org/paulollivier/libwebnovel"
authors = ["Paul Ollivier <contact@paulollivier.fr>"]
version = "0.3.2"
edition = "2021"
license = "AGPL-3.0-or-later"
readme = "README.md"
categories = [
    "data-structures",
]
keywords = [
    "novel",
    "scrapper",
    "webnovel"
]
exclude = [
    "release.sh"
]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["all"]
all = ["royalroad", "freewebnovel"]
royalroad = ["dep:reqwest", "dep:scraper"]
freewebnovel = ["dep:reqwest", "dep:scraper"]
libread = ["freewebnovel"]

[dependencies]
thiserror = { version = "1.0.63" }
regex = "1.10.6"
getset = { version = "0.1.2" }
chrono = "0.4.38"
log = "0.4.22"
strum = { version = "0.26.3", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["blocking"], optional = true }
scraper = { version = "0.20.0", optional = true }

[dev-dependencies]
indoc = "2.0.5"
test-log = "0.2.16"
