[package]
name = "libwebnovel"
description = "A Rust crate enabling users to get chapters of a webnovel, with multiple available backends."
homepage = "https://codeberg.org/paulollivier/libwebnovel"
repository = "https://codeberg.org/paulollivier/libwebnovel"
authors = ["Paul Ollivier <contact@paulollivier.fr>"]
version = "0.9.2"
edition = "2021"
license = "AGPL-3.0-or-later"
readme = "README.md"
categories = [
    "data-structures",
]
keywords = [
    "novel",
    "scrapper",
    "webnovel"
]
exclude = [
    "release.sh",
    ".pre-commit-config.yaml"
]

[package.metadata.docs.rs]
all-features = true

[lib]
name = "libwebnovel"
path = "src/lib.rs"

[[bin]]
name = "rr-gen-anti-theft-list"
path = "src/bin/rr-anti-theft-list-generator.rs"
required-features = ["helper_scripts", "royalroad"]

[features]
default = ["royalroad", "freewebnovel", "lightnovelworld"]
all = ["default", "libread"]
royalroad = ["dep:reqwest", "dep:scraper", "dep:html-escape"]
freewebnovel = ["dep:reqwest", "dep:scraper", "dep:html-escape"]
libread = ["freewebnovel"]
lightnovelworld = ["dep:reqwest", "dep:scraper", "dep:html-escape"]
helper_scripts = ["dep:diff", "dep:pretty_env_logger"]

[dependencies]
thiserror = { version = "1.0.63" }
regex = "1.10.6"
getset = { version = "0.1.2" }
chrono = "0.4.38"
log = "0.4.22"
strum = { version = "0.26.3", features = ["derive"] }

# Backends deps
reqwest = { version = "0.12.7", features = ["blocking", "gzip"], optional = true }
scraper = { version = "0.20.0", optional = true }
html-escape = { version = "0.2.13", optional = true }

# helper scripts deps
diff = { version = "0.1.13", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }


[dev-dependencies]
indoc = "2.0.5"
tempfile = "3.12.0"
test-log = "0.2.16"
